# laundry-buddy

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/profir/laundry_buddy/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/profir/laundrybuddy/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/profir/laundrybuddy/main/: MainActivityTests.kt
app/src/androidTest/java/com/profir/laundrybuddy/utils/: Utilities.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  nftSimple.cpp
app/src/main/java/com/profir/laundry_buddy/: MainActivity.kt
app/src/main/java/com/profir/laundry_buddy/easyar/: BoxRenderer.kt  GLView.kt  HelloAR.kt  MainARActivity.kt
app/src/main/java/com/profir/laundry_buddy/nftSimple/: CameraSurface.java  Renderer.java  nftSimpleActivity.java  nftSimpleApplication.java
app/src/main/java/com/profir/laundrybuddy/: LaundryBuddyApplication.kt  MainActivity.kt
app/src/main/java/com/profir/laundrybuddy/easyar/: BoxRenderer.kt  GLView.kt  HelloAR.kt  MainARActivity.kt
app/src/main/java/com/profir/laundrybuddy/ui/about/fragments/: AboutFragment.kt
app/src/main/java/com/profir/laundrybuddy/ui/easyar/: BoxRenderer.kt  EasyARActivity.kt  GLView.kt  HelloAR.kt
app/src/main/java/com/profir/laundrybuddy/ui/main/: MainActivity.kt
app/src/main/java/com/profir/laundrybuddy/ui/main/activities/: MainActivity.kt
app/src/main/java/com/profir/laundrybuddy/ui/main/fragments/: BaseContentFragment.kt  MainFragment.kt
app/src/main/java/com/profir/laundrybuddy/ui/main/viewmodels/: MainViewModel.kt
app/src/main/java/com/profir/laundrybuddy/utils/: NativeUtils.kt
app/src/main/res/color/: main_menu_colors.xml
app/src/main/res/drawable/: ic_camera_dark.xml  ic_dry_drip.xml  ic_dry_flat.xml  ic_dry_line.xml  ic_dry_no.xml  ic_dry_shade.xml  ic_dry_wring_no.xml  ic_iron_no.xml  ic_iron_normal.xml  ic_iron_steam_no.xml  ic_iron_temperature_high.xml  ic_iron_temperature_low.xml  ic_iron_temperature_medium.xml  ic_tumble_dry_gentle.xml  ic_tumble_dry_heat_high.xml  ic_tumble_dry_heat_low.xml  ic_tumble_dry_heat_medium.xml  ic_tumble_dry_heat_no.xml  ic_tumble_dry_normal.xml  ic_tumble_dry_not.xml  ic_tumble_dry_permanent_press.xml  ic_wash_delicate.xml  ic_wash_hand.xml  ic_wash_no.xml  ic_wash_normal.xml  ic_wash_permanent_press.xml  ic_wash_temperature_30.xml  ic_wash_temperature_30_celsius.xml  ic_wash_temperature_40.xml  ic_wash_temperature_40_celsius.xml  ic_wash_temperature_50.xml  ic_wash_temperature_50_celsius.xml  ic_wash_temperature_60.xml  ic_wash_temperature_60_celsius.xml  ic_wash_temperature_70.xml  ic_wash_temperature_70_celsius.xml  ic_wash_temperature_95.xml  ic_wash_temperature_95_celsius.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_main.xml  fragment_scan.xml  fragment_symbols.xml  fragment_symbols_item.xml
app/src/main/res/menu/: easy_ar.xml  main.xml  menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  dry.xml  ids.xml  iron.xml  strings.xml  styles.xml  wash.xml
app/src/test/java/com/profir/laundry_buddy/: ExampleUnitTest.kt
app/src/test/java/com/profir/laundrybuddy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
